styles/globals.css
/* Importing Custom Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Source+Sans+Pro:wght@300;400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

/* Writing out comments to better understand dynamic Tailwind CSS */
/* To add Global styles to Tailwind, use @layer */
@layer base {
  /* Target HTML elements using @apply */
  body {
    /* You can use [] to create custom values */
    @apply bg-[#f1f3f4] text-[#343437] tracking-wide
  }

  h1, h2, h3, h4, h5, h6 {
    @apply font-bold font-Inter
  }

  h1 {
    @apply text-4xl sm:text-5xl md:text-6xl
  }

  h2 {
    @apply text-3xl sm:text-4xl
  }

  p {
    @apply font-sourceSansPro
  }

  li {
    @apply cursor-pointer
  }

  button {
    @apply shadow-xl shadow-gray-400 rounded-xl uppercase bg-gradient-to-r from-[#7f96bb] to-[#567CB8] text-[#343437]
  }
}

/* CUSTOM STYLING FOR MY NAVIGATION MENU */

/* Styling the checkbox for the dropdown menu */
.header .menu-icon {
  cursor: pointer;
  float: right;
  padding: 28px 10px;
  position: relative;
  user-select: none;
  -webkit-tap-highlight-color: transparent
}

.header .menu-icon .hamburger {
  background: #343437;
  display: block;
  height: 2px;
  position: relative;
  transition: background .2s ease-out;
  width: 25px;
}

.header .menu-icon .hamburger:before,
.header .menu-icon .hamburger:after {
  background: #343437;
  content: '';
  display: block;
  height: 100%;
  position: absolute;
  transition: all .2s ease-out;
  width: 100%;
}

.header .menu-icon .hamburger:before {
  top: 7px;
}

.header .menu-icon .hamburger:after {
  top: -7px;
}

/* Styling the hamburger menu itself */
.header .dropdown-button {
  display: none;
}

.header .dropdown-button:checked~.menu {
  max-height: 240px;
}

.header .dropdown-button:checked~.menu-icon .hamburger {
  background: transparent;
}

.header .dropdown-button:checked~.menu-icon .hamburger:before {
  transform: rotate(-45deg);
}

.header .dropdown-button:checked~.menu-icon .hamburger:after {
  transform: rotate(45deg);
}

.header .dropdown-button:checked~.menu-icon:not(.steps) .hamburger:before,
.header .dropdown-button:checked~.menu-icon:not(.steps) .hamburger:after {
  top: 0;
}

/* HORIZONTAL LINE ANIMATION */
.horizontal-line {
  height: 0px;
  width: 1px;
  border-bottom: 2px solid #7f96bb;

  -webkit-animation: increase 3s;
  -moz-animation: increase 3s;
  -o-animation: increase 3s;
  animation: increase 2s;
  animation-fill-mode: forwards;
}

@keyframes increase {
  100% {
    width: 100%;
  }
}

/* BORDER FADE IN (ABOUT ME) */
.about-me {
  -webkit-animation: fadein 2.5s;
  animation: fadein 2.5s;
}

/* 404 Error Styling */
.code-area {
  position: absolute;
  width: 320px;
  min-width: 320px;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

/* HOVER EFFECT */
.cool {
  padding-top: 10px;
}

.cool:before {
  left: 0;
  bottom: 0;
  width: 100%;
  height: 2px;
  background: #7f96bb;
  transform: scaleX(0);
}

.cool:hover:before {
  transform: scaleX(1);
}

a {
  position: relative;
  color: inherit;
  text-decoration: none;
  line-height: 24px;
}

a:before,
a:after {
  content: '';
  position: absolute;
  transition: transform 0.5s ease;
}

/* TABS STYLING */
.css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
  color: #7f96bb;
}

.css-1aquho2-MuiTabs-indicator {
  background: #7f96bb;
}

button {
  --tw-shadow-colored: none;
}

.css-heg063-MuiTabs-flexContainer {
  justify-content: center;
}

